# goodmem-adk

./: LICENSE  README.md  pyproject.toml
docs/: env-var-test-plan.md  integration-test-plan.md
examples/: README.md  services.py
examples/goodmem_memory_service_demo/: agent.py
examples/goodmem_plugin_demo/: agent.py
examples/goodmem_tools_demo/: agent.py
goodmem_adk/: __init__.py  client.py  memory.py  plugin.py  tools.py
tests/: conftest.py  test_client.py  test_integration.py  test_memory.py  test_optional_env_vars.py  test_plugin.py  test_tools.py
